cv-front | Colla Page fixed colour contrast and added secondary colour to info
Background added like with description.

--- a/cv-front/src/app/sections/colles/colla/CollaPage.module.scss
+++ b/cv-front/src/app/sections/colles/colla/CollaPage.module.scss
@@ -36,6 +36,9 @@
     font-size: 4rem;
     font-weight: 900;
     line-height: 1;
+    width: fit-content;
+    border-radius: 1rem;
+    padding: 1rem;
   }
 
   &__entity {
@@ -43,6 +46,9 @@
     font-size: 1.5rem;
     font-style: italic;
     text-transform: uppercase;
+    width: fit-content;
+    border-radius: 1rem;
+    padding: 1rem;
   }
 
   &__foundationYear {
@@ -51,6 +57,7 @@
     font-weight: 800;
     transform: scaleX(0.7);
     transform-origin: left; /* Set transform origin to the left side */
+    padding-left: 1.5rem;
   }
 
   &__description {
@@ -60,7 +67,7 @@
     font-size: 1rem;
     width: fit-content;
     border-radius: 1rem;
-    padding: 1rem 1rem 1rem 0rem;
+    padding: 1rem;
   }
 
   /* ---------------------------------------------------- Characteristics labels ---------------------------------------------------- */
@@ -68,6 +75,7 @@
     display: flex;
     flex-wrap: wrap;
     z-index: 3;
+    padding-left: 1rem;
   }
 
   &__type, &__neighbourhood, &__music, &__instagramText {
@@ -75,7 +83,7 @@
     color: #f8f1f1;
     border-radius: 1rem;
     padding: 0.15rem 0.7rem;
-    margin-right: 0.5rem;
+    margin-left: 1rem;
     display: inline-flex; /* Ensure each characteristic behaves as inline flex */
     align-items: center;
     white-space: nowrap; /* Prevent text wrapping within the characteristic */
@@ -86,14 +94,14 @@
 
   &__additionalTextButton {
     padding: 0.15rem 0.7rem;
-    margin-right: 0.5rem;
+    margin-right: 1rem;
     border-radius: 0.1rem 1rem 1rem 0.1rem;
     width: fit-content;
   }
 
   .outerLink, .updateButton {
     cursor: pointer;
-    margin-right: 0.5rem;
+    margin-right: 1rem;
     vertical-align: middle;
     img {
       width: 30px;
